force-app/main/default/objects/Investigation__c/Investigation__c.object-meta.xml
<CustomObject>
    <label>Investigation</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Investigation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>