force-app/main/default/objects/Investigation__c/fields/A_physical_injury__c.field-meta.xml
<CustomField>
    <fullName>A_physical_injury__c</fullName>
    <inlineHelpText>A physical injury (brefly describe the current or prior injury)</inlineHelpText>
    <label>A physical injury</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>