force-app/main/default/objects/Investigation__c/fields/Alleged_Maltreator__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Maltreator__c</fullName>
    <label>Alleged Maltreator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>