force-app/main/default/objects/Investigation__c/fields/Alleged_Victim_s_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Victim_s_Explanation__c</fullName>
    <inlineHelpText>Alleged Victim(s) Explanation : (account of what occured)</inlineHelpText>
    <label>Alleged Victim(s) Explanation</label>
    <type>TextArea</type>
</CustomField>