force-app/main/default/objects/Investigation__c/fields/collateral_Interview__c.field-meta.xml
<CustomField>
    <fullName>collateral_Interview__c</fullName>
    <inlineHelpText>collateral Interview (CPS interview w/referent,school personnel,child care provider,provider,family,relatives,friends, other individuals who witnessed the incident or to whom the victim states he/she disclosed the incident .)</inlineHelpText>
    <label>Collateral Interview</label>
    <type>TextArea</type>
</CustomField>