force-app/main/default/objects/Investigation__c/fields/Collateral_Visit_Participants__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Visit_Participants__c</fullName>
    <label>Collateral Visit Participants</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>