force-app/main/default/objects/Investigation__c/fields/Condition_of_the_Home__c.field-meta.xml
<CustomField>
    <fullName>Condition_of_the_Home__c</fullName>
    <inlineHelpText>Condition of the Home : (ex., sleeping arrangements, sanitation, food supply, safety, etc, : attach records or picture if available)</inlineHelpText>
    <label>Condition of the Home</label>
    <type>TextArea</type>
</CustomField>