force-app/main/default/objects/Investigation__c/fields/Contact_Duration__c.field-meta.xml
<CustomField>
    <fullName>Contact_Duration__c</fullName>
    <label>Contact Duration</label>
    <type>Time</type>
</CustomField>