force-app/main/default/objects/Investigation__c/fields/Contact_Location__c.field-meta.xml
<CustomField>
    <fullName>Contact_Location__c</fullName>
    <label>Contact Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>DHR Office</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Provider office</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>LDSS Office</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Court</fullName>
            </value>
            <value>
                <fullName>Detention Facility</fullName>
            </value>
            <value>
                <fullName>Parent&apos;s Residence</fullName>
            </value>
            <value>
                <fullName>Relative&apos;s Residence</fullName>
            </value>
            <value>
                <fullName>Public Facility</fullName>
            </value>
            <value>
                <fullName>Service Professional Office</fullName>
            </value>
            <value>
                <fullName>Child&apos;s Residence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>