force-app/main/default/objects/Investigation__c/fields/Contact_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Contact_Purpose__c</fullName>
    <label>Contact Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>Affidavit of Disclosure</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Case Closure</fullName>
            </value>
            <value>
                <fullName>Case Consultation</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Case Monitoring</fullName>
            </value>
            <value>
                <fullName>Case Plan/Review</fullName>
            </value>
            <value>
                <fullName>Case Staffing</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Corrective Action Plan</fullName>
            </value>
            <value>
                <fullName>Court</fullName>
            </value>
            <value>
                <fullName>Crisis Intervention</fullName>
            </value>
            <value>
                <fullName>Day Care Assessment</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Family Assessment</fullName>
            </value>
            <value>
                <fullName>In Home Consultation</fullName>
            </value>
            <value>
                <fullName>In Home Supervision</fullName>
            </value>
            <value>
                <fullName>In Service Training</fullName>
            </value>
            <value>
                <fullName>Initial Assessment</fullName>
            </value>
            <value>
                <fullName>Initial Assessment with Law Enforcement</fullName>
            </value>
            <value>
                <fullName>Inquiry/Information</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Inter Agency Coordination</fullName>
            </value>
            <value>
                <fullName>CPS</fullName>
            </value>
            <value>
                <fullName>Investigation with Law Enforcement</fullName>
            </value>
            <value>
                <fullName>Law Enforcement Intervention/Assistance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>