force-app/main/default/objects/Investigation__c/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
                <default>true</default>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Child Refuse</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>