force-app/main/default/objects/Investigation__c/fields/Contributing_Factor_in_the_Family__c.field-meta.xml
<CustomField>
    <fullName>Contributing_Factor_in_the_Family__c</fullName>
    <label>Contributing Factor in the Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>