force-app/main/default/objects/Investigation__c/fields/Due_On__c.field-meta.xml
<CustomField>
    <fullName>Due_On__c</fullName>
    <formula>CreatedDate  + 59</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due On</label>
    <type>Date</type>
</CustomField>