force-app/main/default/objects/Investigation__c/fields/Head_of_Household__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Household</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Investigations</relationshipLabel>
    <relationshipName>Investigations</relationshipName>
    <type>Lookup</type>
</CustomField>