force-app/main/default/objects/Investigation__c/fields/Investigation_Finding_Status__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Finding_Status__c</fullName>
    <label>Investigation Finding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submit for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>