force-app/main/default/objects/Investigation__c/fields/Investigation_Findings_Approver__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Findings_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation Findings Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Casevault Supervisor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Investigations</relationshipName>
    <type>Lookup</type>
</CustomField>