force-app/main/default/objects/Investigation__c/fields/Involved_Person__c.field-meta.xml
<CustomField>
    <fullName>Involved_Person__c</fullName>
    <label>Involved Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>