force-app/main/default/objects/Investigation__c/fields/Law_Enforcement_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Law_Enforcement_Involvement__c</fullName>
    <inlineHelpText>Law Enforcement Involvement : (attach records if available in document tab)(account of what occurred)</inlineHelpText>
    <label>Law Enforcement Involvement</label>
    <type>TextArea</type>
</CustomField>