force-app/main/default/objects/Investigation__c/fields/Maltreatment_Type__c.field-meta.xml
<CustomField>
    <fullName>Maltreatment_Type__c</fullName>
    <label>Maltreatment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Abuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>