force-app/main/default/objects/Investigation__c/fields/Name_of_the_Person_completing_report__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Person_completing_report__c</fullName>
    <inlineHelpText>Name of the Person completing this report</inlineHelpText>
    <label>Name of the Person completing report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facilitator</fullName>
                <default>true</default>
                <label>Facilitator</label>
            </value>
            <value>
                <fullName>Case Worker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>