force-app/main/default/objects/Investigation__c/fields/Number_of_days_created_date__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_created_date__c</fullName>
    <formula>IF(TODAY() &lt;  Due_On__c , Due_On__c -TODAY() , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days created date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>