force-app/main/default/objects/Investigation__c/fields/Other_Professional_or_Expert_Assessments__c.field-meta.xml
<CustomField>
    <fullName>Other_Professional_or_Expert_Assessments__c</fullName>
    <inlineHelpText>Other Professional or Expert Assessments(s): (attach records if available in document tab)</inlineHelpText>
    <label>Other Professional or Expert Assessments</label>
    <type>TextArea</type>
</CustomField>