force-app/main/default/objects/Investigation__c/fields/Parent_Legal_Guardian_s_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Parent_Legal_Guardian_s_Explanation__c</fullName>
    <inlineHelpText>Parent/Legal Guardian(s) Explanation :(account of what occurred)</inlineHelpText>
    <label>Parent/Legal Guardian(s) Explanation</label>
    <type>TextArea</type>
</CustomField>