force-app/main/default/objects/Investigation__c/fields/Persons_Involved__c.field-meta.xml
<CustomField>
    <fullName>Persons_Involved__c</fullName>
    <label>Persons Involved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>