force-app/main/default/objects/Investigation__c/fields/Physician_or_Other_Medical_Assessment_s__c.field-meta.xml
<CustomField>
    <fullName>Physician_or_Other_Medical_Assessment_s__c</fullName>
    <inlineHelpText>Physician or Other Medical Assessment(s): (attach records if available in document tab)(account of what occurred)</inlineHelpText>
    <label>Physician or Other Medical Assessment(s)</label>
    <type>TextArea</type>
</CustomField>