force-app/main/default/objects/Investigation__c/fields/Response_Timer__c.field-meta.xml
<CustomField>
    <fullName>Response_Timer__c</fullName>
    <label>Response Timer</label>
    <type>DateTime</type>
</CustomField>