force-app/main/default/objects/Investigation__c/fields/Select_Child_Family_Member__c.field-meta.xml
<CustomField>
    <fullName>Select_Child_Family_Member__c</fullName>
    <label>Select Child/Family Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>