force-app/main/default/objects/Investigation__c/fields/Specify_any_other_participants__c.field-meta.xml
<CustomField>
    <fullName>Specify_any_other_participants__c</fullName>
    <inlineHelpText>Specify any other participants that are not members of this cases</inlineHelpText>
    <label>Specify any other participants</label>
    <type>TextArea</type>
</CustomField>