force-app/main/default/objects/Investigation__c/fields/The_victim_was_a_child_child_s_DOB__c.field-meta.xml
<CustomField>
    <fullName>The_victim_was_a_child_child_s_DOB__c</fullName>
    <inlineHelpText>The victim was a child (child&apos;s DOB)</inlineHelpText>
    <label>The victim was a child (child&apos;s DOB)</label>
    <type>Date</type>
</CustomField>