force-app/main/default/objects/Investigation__c/listViews/Today_Invesigation.listView-meta.xml
<ListView>
    <fullName>Today_Invesigation</fullName>
    <columns>NAME</columns>
    <columns>Intake__c</columns>
    <columns>Head_of_Household__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today  Invesigation</label>
</ListView>